# zenium

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  task.yml
.github/workflows/: ci.yml
build-aux/m4/: bitcoin_qt.m4
build_msvc/: .gitignore  README.md  bitcoin.sln  bitcoin_config.h.in  msvc-autogen.py  vcpkg.json  zenium.sln
build_msvc/bitcoind/: bitcoind.vcxproj
build_msvc/test_zenium-qt/: test_zenium-qt.vcxproj
build_msvc/zeniumd/: zeniumd.vcxproj
ci/: lint_imagefile
ci/lint/: 06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env_i686_multiprocess.sh  02_run_container.sh  03_test_script.sh
contrib/: README.md  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py
contrib/devtools/: README.md  copyright_header.py  gen-bitcoin-conf.sh  gen-manpages.py  gen-zenium-conf.sh  headerssync-params.py  symbol-check.py  (+3 more)
contrib/devtools/zenium-tidy/: CMakeLists.txt  README.md  example_logprintf.cpp  logprintf.cpp  logprintf.h  nontrivial-threadlocal.cpp  nontrivial-threadlocal.h  zenium-tidy.cpp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  tor.md  tracing.md  (+4 more)
share/: setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addresstype.h  addrman.cpp  arith_uint256.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  coins.h  dbwrapper.cpp  external_signer.h  hash.h  headerssync.h  init.cpp  init.h  key.cpp  key_io.cpp  noui.h  protocol.h  psbt.h  pubkey.cpp  randomenv.cpp  tinyformat.h  torcontrol.h  txdb.cpp  (+1 more)
test/: README.md  get_previous_releases.py
(+424 files in other folders)
